# copperdragons

./: .env  AGENTS.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: project-context.mdc
docs/: PROJECT.md
docs/plans/: trim-rgb-matrix-vendor.md
escape-room-display/: README.md  env.example  escape-room-display.service  send-test.sh  server.py  spell_runner.py
led_screen/spell-data/fireball/: fireball-frame_3.json
led_screen/spell-data/loading/: loading-colours.json  loading-frame_0.json  loading-frame_1.json
led_screen/spell-data/swirl/: swirl-colours.json  swirl-frame_0.json  swirl-frame_1.json  swirl-frame_2.json  swirl-frame_3.json  swirl-frame_4.json  swirl-frame_5.json
led_screen/spell-data/void/: void-frame21.json  void-frame_11.json  void-frame_12.json  void-frame_14.json  void-frame_20.json  void-frame_4.json
led_screen/spell-data/wheel/: wheel-colours.json  wheel-frame_0.json  wheel-frame_1.json  wheel-frame_2.json  wheel-frame_3.json  wheel-frame_4.json  wheel-frame_5.json
led_screen/spell-data/zipper/: zipper-colours.json  zipper-frame_0.json  (+15 more)
led_screen/spell_runner/: animate_spell.py
led_screen/spells/: runtext.py  samplebase.py  spell.py  zigzag.py
rfid_scanner/: README.md  check_pn5180_wiring.py  combo_spells.example.json  requirements.txt  scan.py  tag_spells.example.json  tag_spells.json
rfid_scanner/src/: config.py  controller.py  reader.py  runner.py  scan.py  sender.py  smoke_test.py  storage.py
scripts/: setup.sh
utils/convert-image-to-rgb/: rgb_extract.py  rgb_pipeline.py  rgb_to_image.py
(+568 files in other folders)
