[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "copperdragons"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "external/rgb-matrix/bindings/python/samples"}

[tool.setuptools.packages.find]
where = ["external/rgb-matrix/bindings/python/samples"]